Configure dagger with main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DecathlonHiring</string>
+    <string name="main_activity_exit_confirmation_message">Press back again to exit game</string>
 </resources>
