--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">DecathlonHiring</string>
-    <string name="main_activity_exit_confirmation_message">Press back again to exit game</string>
+  <string name="app_name">DecathlonHiring</string>
+  <string name="main_activity_exit_confirmation_message">Press back again to exit game</string>
+
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
