--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="start_game_fragment_button_text">START GAME</string>
+  <string name="start_game_fragment_all_the_best_message">All the best!</string>
 </resources>
