--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="start_game_fragment_button_text">START GAME</string>
   <string name="start_game_fragment_all_the_best_message">All the best!</string>
+  <string name="game_fragment_bowl_button_text">Bowl</string>
 </resources>
