--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
   <string name="app_name">DecathlonHiring</string>
+
   <string name="main_activity_exit_confirmation_message">Press back again to exit game</string>
 
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="start_game_fragment_button_text">START GAME</string>
   <string name="start_game_fragment_all_the_best_message">All the best!</string>
-  <string name="game_fragment_bowl_button_text">Bowl</string>
+
+  <string name="game_fragment_bowl_button_text">BOWL</string>
 </resources>
